[project]
name = "anydownloadscript"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "fastapi>=0.118.0",
    "loguru>=0.7.3",
    "lxml>=6.0.2",
    "pydantic-settings>=2.11.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "uvicorn>=0.37.0",
]
